Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/bad/User.java
package org.example.SRP.bad;

public class User {
    String getEmailAddress() {
        return "user@mail.com";
    }

    String getConfirmationCode() {
        return "asd595qw7e4654d6a4dasd";
    }
}
